--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h1>We <span id="js-rotating">Are Diabetes Diet Advisors, Make a Health in Your Lives</span>
+                        <h1>We <span id="js-rotating">Are Diabetes Diet Advisors, Make Health in Your Lives</span>
                         </h1>
                         <p class="p-heading p-large">We providing diet advice for elderly Type2 diabetes</p>
                         <!-- <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a> -->
