--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@
                     <div class="section-title">INTRO</div>
                     <h2>Your Body Knows What It Needs.
                         Now You Can too.</h2>
-                    <p>Get a personalized nutrition plan based on your self-reported test values. Our evidence-based recommendations look at your Physical condition level, age level, and personal wellness goal, to understand what your body needs.
-                    </p>
-                    <p class="testimonial-text">Then, Learn how your handles calories, sugar, and more. Know right away where you’re doing well and where you have opportunities to optimize your health with nutrition. In the following step, daily food guide, and personalized recipes will offer to you. Our website, designed by ByteConnect, helps you eat right at home.</p>
+                    <p>Our evidence-based recommendations look at your Physical condition level, to understand what your body needs.</p>
+                    <p class="testimonial-text">Then, Learn how your handles calories, sugar, and more. Know right away where you’re doing well and where you have opportunities to optimize your health with nutrition. Last, a personalized recipes will offer to you.</p>
                     <div class="testimonial-author">From - ByteConnect</div>
                 </div> <!-- end of text-container -->
             </div> <!-- end of col -->
