--- a/404.html
+++ b/404.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Diabetes Diet Advisor</title>
+    <!-- Favicon  -->
+    <link rel="icon" href="images/logo2.png">
+
 </head>
 
 <body>
@@ -22,6 +25,8 @@
             <p class="am-text-center">
                 <span id="num">5</span>秒后自动跳转到首页<a href="index.html">马上跳转</a>
             </p>
+
+            <img src="images/404.jpeg" height="400" width="400"/>
             <pre class="page-404">          .----.
        _.'__    `.
    .--($)($$)---/#\
