--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
                 <span id="num">5</span>秒后自动跳转到首页<a href="index.html">马上跳转</a>
             </p>
 
-            <img src="images/404.jpeg" height="400" width="400"/>
+            <img src="images/404.jpg" height="400" width="400"/>
             <pre class="page-404">          .----.
        _.'__    `.
    .--($)($$)---/#\
