--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- Favicon  -->
     <link rel="icon" href="images/logo2.png">
 </head>
+
 <body data-spy="scroll" data-target=".fixed-top">
 
 <!-- Preloader -->
@@ -133,18 +134,131 @@
 </div> <!-- end of basic-1 -->
 <!-- end of intro -->
 
-
-<!-- Copyright -->
-<div class="copyright">
+<!-- Services -->
+<div id="services" class="cards-2">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <p class="p-small"><!--Copyright © 2020 <a href="https://inovatik.com">Template by Inovatik</a>--></p>
-            </div>
-        </div>
-    </div>
-</div>
-<!--end of copyright -->
+                <div class="section-title">Health & Cooking Guide</div>
+                <h2>Make it Today Fresh and easy cooking<br> That Suits Your Needs</h2>
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+
+        <div class="row">
+            <div class="col-lg-12">
+
+
+            <!-- Card 1-->
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-fluid" src="images/index_cal.jpg" alt="alternative">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">Calorie Control</h3>
+                        <p>Our evidence-based recommendations look at your Physical condition level, to understand what your body needs </p>
+                        <ul class="list-unstyled li-space-lg">
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Get the value of calorie intake</div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Get recommendations</div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="button-container">
+                        <a class="btn-solid-reg page-scroll" href="calc.html">DETAILS</a>
+                    </div> <!-- end of button-container -->
+                </div>
+                <!-- end of card -->
+
+                <!-- Card 2-->
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-fluid" src="images/index_recipe.jpg" alt="alternative">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">Recipe </h3>
+                        <p>Choose the ingredients you want to include in the food and cuisines? Ingredients and instructions about the recipe will be provided. </p>
+                        <ul class="list-unstyled li-space-lg">
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Get recipes </div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Get instructions</div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="button-container">
+                        <a class="btn-solid-reg page-scroll" href="recipe.html">DETAILS</a>
+                    </div> <!-- end of button-container -->
+                </div>
+                <!-- end of card -->
+
+                <!-- Card 3-->
+                <div class="card">
+                    <div class="card-image">
+                        <img class="img-fluid" src="images/index_disc.jpg" alt="alternative">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">Discovery </h3>
+                        <p>Find supermarkets surrounding your apartment. </p>
+                        <ul class="list-unstyled li-space-lg">
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Get a market information</div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Get recommended shopping list</div>
+                            </li>
+                        </ul>
+                        <p>&nbsp </p>
+
+                    </div>
+                    <div class="button-container">
+                        <a class="btn-solid-reg page-scroll" href="map.html">DETAILS</a>
+                    </div> <!-- end of button-container -->
+                </div>
+                <!-- end of card -->
+
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of container -->
+</div> <!-- end of cards-2 -->
+<!-- end of services -->
+
+
+
+<!-- Footer -->
+                <div class="footer">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="text-container about">
+                                    <h4>Our Story</h4>
+                                    <p class="white">Diabetes Diet Advisor(DDA) exists to support the diverse needs of older Australians and specialise in supporting seniors from culturally diverse backgrounds. DDA strives every day to improve the lives and wellbeing of those we support.</p>
+                                </div> <!-- end of text-container -->
+                            </div> <!-- end of col -->
+                    </div> <!-- end of container -->
+                </div> <!-- end of footer -->
+                <!-- end of footer -->
+
+
+                <!-- Copyright -->
+                <div class="copyright">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <p class="p-small">Copyright © 2020 by DiabeteDietAdvisor by ByteConnect. All Rights Reserved</a></p>
+                            </div> <!-- end of col -->
+                        </div> <!-- enf of row -->
+                    </div> <!-- end of container -->
+                </div> <!-- end of copyright -->
+                <!-- end of copyright -->
 
 
 <!-- Scripts -->
