--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="css/down.animation.css">
 
+
     <!-- Favicon  -->
     <link rel="icon" href="images/logo2.png">
 </head>
@@ -77,9 +78,11 @@
             <li class="nav-item">
                 <a class="nav-link page-scroll" href="map.html">DISCOVERY</a>
             </li>
+            <!--Remove
             <li class="nav-item">
                 <a class="nav-link page-scroll" href="about.html">ABOUT DIABETES</a>
             </li>
+            -->
         </ul>
     </div>
 </nav> <!-- end of navbar -->
@@ -120,7 +123,7 @@
                     <h2>Your Body Knows What It Needs.
                         Now You Can too.</h2>
                     <p>Our evidence-based recommendations look at your Physical condition level, to understand what your body needs.</p>
-                    <p class="testimonial-text">Then, Learn how your handles calories, sugar, and more. Know right away where you’re doing well and where you have opportunities to optimize your health with nutrition. Last, a personalized recipes will offer to you.</p>
+                    <p class="testimonial-text">Then, learn how your handles calories, sugar, and more. Know right away where you’re doing well and where you have opportunities to optimize your health with nutrition. Last, personalized recipes will offer to you.</p>
                     <div class="testimonial-author">From - ByteConnect</div>
                 </div> <!-- end of text-container -->
             </div> <!-- end of col -->
@@ -163,7 +166,7 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Get recommendations</div>
+                                <div class="media-body">Get food recommendations</div>
                             </li>
                         </ul>
                     </div>
@@ -188,7 +191,7 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Get instructions</div>
+                                <div class="media-body">Get instructions to cook the food recipes.</div>
                             </li>
                         </ul>
                     </div>
@@ -205,7 +208,7 @@
                     </div>
                     <div class="card-body">
                         <h3 class="card-title">Discovery </h3>
-                        <p>Find supermarkets surrounding your apartment. </p>
+                        <p>Get the nearest supermarkets information. </p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -243,9 +246,30 @@
                                     <p class="white">Diabetes Diet Advisor(DDA) exists to support the diverse needs of older Australians and specialise in supporting seniors from culturally diverse backgrounds. DDA strives every day to improve the lives and wellbeing of those we support.</p>
                                 </div> <!-- end of text-container -->
                             </div> <!-- end of col -->
+
+                            <div class="col-md-2">
+                                <div class="text-container">
+                                    <h4>Links</h4>
+                                    <ul class="list-unstyled li-space-lg white">
+                                        <li>
+                                            <a class="white" href="#">Home</a>
+                                        </li>
+                                        <li>
+                                            <a class="white" href="calc.html">Calories Control</a>
+                                        </li>
+                                        <li>
+                                            <a class="white" href="recipe.html">Recipe</a>
+                                        </li>
+                                        <li>
+                                            <a class="white" href="map.html">Discovery</a>
+                                        </li>
+
+                                    </ul>
+                                </div> <!-- end of text-container -->
+                            </div> <!-- end of col -->
                     </div> <!-- end of container -->
                 </div> <!-- end of footer -->
-                <!-- end of footer -->
+                </div><!-- end of footer -->
 
 
                 <!-- Copyright -->
@@ -280,6 +304,7 @@
         $('html , body').animate({scrollTop: $('#intro').offset().top}, 800);//点击按钮向下到指定位置，时间为800毫秒
     });
 </script>
+
 
 </body>
 </html>
