--- a/404.html
+++ b/404.html
@@ -1,50 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+
+<html lang="en"><head><meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width">
     <meta charset="UTF-8">
     <title>Diabetes Diet Advisor</title>
     <!-- Favicon  -->
     <link rel="icon" href="images/logo2.png">
-
+    <style>
+        *{margin:0;padding:0}html,code{font:15px/22px arial,sans-serif}html{background:#fff;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}* > body{background: 100% 5px no-repeat;padding-right:205px}p{margin:11px 0 22px;overflow:hidden}ins{color:#777;text-decoration:none}a img{border:0}@media screen and (max-width:772px){body{background:none;margin-top:0;max-width:none;padding-right:0}}
+    </style>
 </head>
-
-<body>
-<div class="admin-content">
-    <div class="am-cf am-padding">
-        <div class="am-fl am-cf">
-            <strong class="am-text-primary am-text-lg">404</strong> / <small>That’s an error</small>
-        </div>
-    </div>
-
+<body data-gr-c-s-loaded="true"><a href="//www.google.com/"><span id="logo" aria-label="Google"></span></a>
+<p><b>404.</b> <ins>That’s an error.</ins>
+</p><p>The requested URL was not found on this server.  <ins>That’s all we know.</ins>
     <div class="am-g">
         <div class="am-u-sm-12">
-            <h2 class="am-text-center am-text-xxxl am-margin-top-lg">404. Not Found</h2>
-            <p class="am-text-center">
-                没有找到你要的页面
-            </p>
-            <p class="am-text-center">
-                <span id="num">5</span>秒后自动跳转到首页<a href="index.html">马上跳转</a>
-            </p>
+<p class="am-text-center">
+    Automatically redirects to the home page after <span id="num">5</span>s
+</p>
 
-            <img src="images/404.jpg" height="400" width="400"/>
-            <pre class="page-404">          .----.
-       _.'__    `.
-   .--($)($$)---/#\
- .' @          /###\
- :         ,   #####
-  `-..__.-' _.-\###/
-        `;_:    `"'
-      .'"""""`.
-     /,  ya ,\\
-    //  404!  \\
-    `-._______.-'
-    ___`. | .'___
-   (______|______)
-        </pre>
-        </div>
-    </div>
+<p>
+    <a href="index.html">Immediately visit.</a>
+</p>
+
+<img src="images/logo2.png" height="400" width="400"/>
 </div>
-</body>
+</div>
+</p><audio controls="controls" style="display: none;"></audio></body>
+<style type="text/css">#yddContainer{display:block;font-family:Microsoft YaHei;position:relative;width:100%;height:100%;top:-4px;left:-4px;font-size:12px;border:1px solid}#yddTop{display:block;height:22px}#yddTopBorderlr{display:block;position:static;height:17px;padding:2px 28px;line-height:17px;font-size:12px;color:#5079bb;font-weight:bold;border-style:none solid;border-width:1px}#yddTopBorderlr .ydd-sp{position:absolute;top:2px;height:0;overflow:hidden}.ydd-icon{left:5px;width:17px;padding:0px 0px 0px 0px;padding-top:17px;background-position:-16px -44px}.ydd-close{right:5px;width:16px;padding-top:16px;background-position:left -44px}#yddKeyTitle{float:left;text-decoration:none}#yddMiddle{display:block;margin-bottom:10px}.ydd-tabs{display:block;margin:5px 0;padding:0 5px;height:18px;border-bottom:1px solid}.ydd-tab{display:block;float:left;height:18px;margin:0 5px -1px 0;padding:0 4px;line-height:18px;border:1px solid;border-bottom:none}.ydd-trans-container{display:block;line-height:160%}.ydd-trans-container a{text-decoration:none;}#yddBottom{position:absolute;bottom:0;left:0;width:100%;height:22px;line-height:22px;overflow:hidden;background-position:left -22px}.ydd-padding010{padding:0 10px}#yddWrapper{color:#252525;z-index:10001;background:url(chrome-extension://eopjamdnofihpioajgfdikhhbobonhbb/ab20.png);}#yddContainer{background:#fff;border-color:#4b7598}#yddTopBorderlr{border-color:#f0f8fc}#yddWrapper .ydd-sp{background-image:url(chrome-extension://eopjamdnofihpioajgfdikhhbobonhbb/ydd-sprite.png)}#yddWrapper a,#yddWrapper a:hover,#yddWrapper a:visited{color:#50799b}#yddWrapper .ydd-tabs{color:#959595}.ydd-tabs,.ydd-tab{background:#fff;border-color:#d5e7f3}#yddBottom{color:#363636}#yddWrapper{min-width:250px;max-width:400px;}</style></html>
 
 <script type="text/javascript">
     var num = 5;
@@ -58,5 +40,7 @@
     }
     setInterval("redirect()", 1000);
 </script>
+
+
 
 </html>
