--- a/calc.html
+++ b/calc.html
@@ -156,11 +156,11 @@
         </header>
         <div class="calc">
             <div class="heading-section" style="padding-top: 50px;">
-                <h2 style="color: #0b2e13">Measure and Recommendation</h2>
-                <h3 style="color: #0b0b0b; font-size: 18px">We aim to provide life-enhancing services and vital support to people in later life.</h3>
+                <h2 style="color: #0b2e13">Evaluation and Recommendation</h2>
+                <h3 style="color: #0b0b0b; font-size: 18px">We aim to provide personalized services for the your nutrition intake and help you with our recommended meals.</h3>
                 <h3 style="color: #0b0b0b; font-size: 18px"> DDA will analyze your physical condition and show you the recommended recipes for a day. </h3>
 
-                <section id="zubaer-calorie-calculator-2" class="widget card widget_zubaer-calorie-calculator amr_widget" style="width: 450px;height: 425px; left:400px"><h3 class="widget-title card-header">calcount Calorie Calculator </h3>
+                <section id="zubaer-calorie-calculator-2" class="widget card widget_zubaer-calorie-calculator amr_widget" style="width: 450px;height: 425px; left:400px"><h3 class="widget-title card-header">Calorie Calculator</h3>
 
 
 
@@ -307,7 +307,7 @@
 
                             <div class="bmi-calc">
                                 <p5> Your BMR is<p6> {{calcResult.bmr}}</p6></p5>
-                                <p> Basal Metabolic Rate is the number of calories required to keep your body functioning at rest. BMR is also known as your body's metabolism; therefore, any increase to your metabolic weight, such as exercise, will increase your BMR. To get your BMR, simply input your height, gender, age and weight below.</p>
+                                <p><strong>Basal Metabolic Rate is the number of calories required to keep your body functioning at rest. BMR is also known as your body’s metabolism. Therefore, any increase to your metabolic weight such as exercise will improve your BMR.</strong></p>
                             </div>
                             <div class="bmi-calc">
                                 <p5> Your Daily Caloric Intake:</p5>
@@ -397,7 +397,7 @@
                     <div class="col-md-6" style="position: relative;width: 100%;padding-right: 15px;padding-left: 15px;">
                         <div class="text-container about" style="width: 330px; height:148px; margin-bottom: 2.25rem;">
                             <h4>Our Story</h4>
-                            <p1 class="white" style="color:#dfe5ec; text-align:left;">Diabetes Diet Advisor(DDA) exists to support the diverse needs of older Australians and specialise in supporting seniors from culturally diverse backgrounds. DDA strives every day to improve the lives and wellbeing of those we support.</p1>
+                            <p1 class="white" style="color:#dfe5ec; text-align:left;">Diabetes Diet Advisor(DDA) helps to support the food requirements of type 2 elderly diabetic patients from various backgrounds of regional Australia. We strive every day to make human lives happier and healthier.</p1>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
 
