--- a/map.html
+++ b/map.html
@@ -86,7 +86,8 @@
 
         <div class="con">
             <div class="heading-section" style="padding: 50px 0;">
-                <h2>Find Your Nearby Supermarkets</h2>
+                <h2>Find Your Nearby Supermarket</h2>
+                <h3>Here is the information to help you streamline your shopping.</h3>
                 <div class="news">
                     <div class="clinic-search-label">
                         <label>Enter a suburb name to search</label></div>
@@ -143,7 +144,7 @@
                     <div class="col-md-6" style="position: relative;width: 100%;padding-right: 15px;padding-left: 15px;">
                         <div class="text-container about" style="width: 330px; height:148px; margin-bottom: 2.25rem;">
                             <h4>Our Story</h4>
-                            <p1 class="white" style="color:#dfe5ec; text-align:left;">Diabetes Diet Advisor(DDA) exists to support the diverse needs of older Australians and specialise in supporting seniors from culturally diverse backgrounds. DDA strives every day to improve the lives and wellbeing of those we support.</p1>
+                            <p1 class="white" style="color:#dfe5ec; text-align:left;">Diabetes Diet Advisor(DDA) helps to support the food requirements of type 2 elderly diabetic patients from various backgrounds of regional Australia. We strive every day to make human lives happier and healthier.</p1>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
 
