--- a/recipe.html
+++ b/recipe.html
@@ -145,7 +145,7 @@
                     </svg>
                 </div>
                 <div class="body-part3-head">
-                    <span>Direction:</span>
+                    <span>Instructions:</span>
                 </div>
                 <div class="body-part3-content">
                     <p v-for="item in directions">
@@ -186,11 +186,11 @@
                 <div class="recipe-part1-title">
                     <p>
                             <span>
-                                Ok, let's Fill Your Information. So we can know your body condition
+                                Let's fill your basic information.
                             </span>
                     </p>
                 </div>
-                <section id="zubaer-calorie-calculator-2" class="widget card widget_zubaer-calorie-calculator amr_widget" style="width: 450px;height: 425px; left:250px"><h3 class="widget-title card-header">calcount Calorie Calculator </h3>
+                <section id="zubaer-calorie-calculator-2" class="widget card widget_zubaer-calorie-calculator amr_widget" style="width: 450px;height: 425px; left:250px"><h3 class="widget-title card-header">Calorie Calculator </h3>
 
 
 
@@ -317,7 +317,7 @@
                 <div class="recipe-part2-title">
                     <p>
                             <span>
-                                Next, What are your preferences?
+                                Next, what are your preferences?
                             </span>
                     </p>
                 </div>
@@ -342,7 +342,7 @@
                     </Row>-->
                     <Row class="f-m-t-48">
                         <i-col span="12" class="f-t-a-r f-p-r-50">
-                            <span class="input-label">My favorite cuisine is</span>
+                            <span class="input-label">My favourite cuisine is</span>
                         </i-col>
                         <i-col span="8">
                             <i-select :model.sync="calcData.cuisine" size="large" placeholder="">
@@ -410,7 +410,7 @@
                     <div class="col-md-6" style="position: relative;width: 100%;padding-right: 15px;padding-left: 15px;">
                         <div class="text-container about" style="width: 330px; height:100px; margin-bottom: 2.25rem;">
                             <h4>Our Story</h4>
-                            <p1 class="white" style="color:#dfe5ec; text-align:left;">Diabetes Diet Advisor(DDA) exists to support the diverse needs of older Australians and specialise in supporting seniors from culturally diverse backgrounds. DDA strives every day to improve the lives and wellbeing of those we support.</p1>
+                            <p1 class="white" style="color:#dfe5ec; text-align:left;">Diabetes Diet Advisor(DDA) helps to support the food requirements of type 2 elderly diabetic patients from various backgrounds of regional Australia. We strive every day to make human lives happier and healthier.</p1>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
 
@@ -508,7 +508,7 @@
                     label: 'American'
                 }, {
                     value: 'asian',
-                    label: 'Asia'
+                    label: 'Asian'
                 }, {
                     value: 'indian',
                     label: 'Indian'
@@ -520,9 +520,9 @@
                     label: 'Mexican'
                 },{
                     value: 'other',
-                    label: 'Other'
+                    label: 'Others'
                 }],
-                favorites: ['Vegetarian', 'Poultry', 'Fish and Seafood', 'Pork', 'Lamb', 'Beef','Other'],
+                favorites: ['Vegetarian', 'Poultry', 'Fish and Seafood', 'Pork', 'Lamb','Goat', 'Beef','Others'],
                 /*favorites: ['Chicken', 'Fish and Seafood', 'Duck', 'Pork', 'Turkey', 'Goat'
                 , 'Lamb', 'Beef','Other'],*/
                 preferences: ['Beans', 'Bread', 'Cheese', 'Corn', 'Noodles', 'Nuts','Potatoes', 'Rice', 'Salad', 'Tomatoes', 'Other'],
