--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h1>We <span id="js-rotating">Are Diabetes Diet Advisors, Make Health in Your Lives</span>
+                        <h1>We <span id="js-rotating">Are Diabetes Diet Advisors,Can Make Your Life Healthy</span>
                         </h1>
-                        <p class="p-heading p-large">We providing diet advice for elderly Type2 diabetes</p>
+                        <p class="p-heading p-large">We are providing diet advice for elderly type 2 diabetes</p>
                         <!-- <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a> -->
                     </div>
                 </div> <!-- end of col -->
@@ -122,8 +122,8 @@
                     <div class="section-title">INTRO</div>
                     <h2>Your Body Knows What It Needs.
                         Now You Can too.</h2>
-                    <p>Our evidence-based recommendations look at your Physical condition level, to understand what your body needs.</p>
-                    <p class="testimonial-text">Then, learn how your handles calories, sugar, and more. Know right away where you’re doing well and where you have opportunities to optimize your health with nutrition. Last, personalized recipes will offer to you.</p>
+                    <p>Our evidence based recommendation helps you to have a great meal with your favourite recipes. You need not worry about the calories that you take because we take care of you.</p>
+                    <p class="testimonial-text">If finding the nearby supermarket is your other concern, then we are here to help you with that as well.</p>
                     <div class="testimonial-author">From - ByteConnect</div>
                 </div> <!-- end of text-container -->
             </div> <!-- end of col -->
@@ -143,7 +143,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title">Health & Cooking Guide</div>
-                <h2>Make it Today Fresh and easy cooking<br> That Suits Your Needs</h2>
+                <h2>Give a fresh start to your meals from today</h2>
             </div> <!-- end of col -->
         </div> <!-- end of row -->
 
@@ -158,7 +158,7 @@
                     </div>
                     <div class="card-body">
                         <h3 class="card-title">Calorie Control</h3>
-                        <p>Our evidence-based recommendations look at your Physical condition level, to understand what your body needs </p>
+                        <p>According to your physical condition, we guide you to control your calories. </p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -183,7 +183,7 @@
                     </div>
                     <div class="card-body">
                         <h3 class="card-title">Recipe </h3>
-                        <p>Choose the ingredients you want to include in the food and cuisines? Ingredients and instructions about the recipe will be provided. </p>
+                        <p>Choose the ingredients you want to include in the food and cuisines.</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -208,15 +208,11 @@
                     </div>
                     <div class="card-body">
                         <h3 class="card-title">Discovery </h3>
-                        <p>Get the nearest supermarkets information. </p>
+                        <p>Get the nearby supermarkets' information.</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Get a market information</div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">Get recommended shopping list</div>
+                                <div class="media-body">Get food market information</div>
                             </li>
                         </ul>
                         <p>&nbsp </p>
@@ -243,7 +239,7 @@
                             <div class="col-md-6">
                                 <div class="text-container about">
                                     <h4>Our Story</h4>
-                                    <p class="white">Diabetes Diet Advisor(DDA) exists to support the diverse needs of older Australians and specialise in supporting seniors from culturally diverse backgrounds. DDA strives every day to improve the lives and wellbeing of those we support.</p>
+                                    <p class="white">Diabetes Diet Advisor(DDA) helps to support the food requirements of type 2 elderly diabetic patients from various backgrounds of regional Australia. We strive every day to make human lives happier and healthier.</p>
                                 </div> <!-- end of text-container -->
                             </div> <!-- end of col -->
 
