--- a/recipe.html
+++ b/recipe.html
@@ -522,7 +522,7 @@
                     value: 'other',
                     label: 'Others'
                 }],
-                favorites: ['Vegetarian', 'Poultry', 'Fish and Seafood', 'Pork', 'Lamb','Goat', 'Beef','Others'],
+                favorites: ['Vegetarian', 'Poultry', 'Fish and Seafood', 'Pork', 'Lamb','Goat', 'Beef','Other'],
                 /*favorites: ['Chicken', 'Fish and Seafood', 'Duck', 'Pork', 'Turkey', 'Goat'
                 , 'Lamb', 'Beef','Other'],*/
                 preferences: ['Beans', 'Bread', 'Cheese', 'Corn', 'Noodles', 'Nuts','Potatoes', 'Rice', 'Salad', 'Tomatoes', 'Other'],
