--- a/map.html
+++ b/map.html
@@ -171,7 +171,7 @@
                 </div> <!-- end of container -->
             </div> <!-- end of footer -->
         </div><!-- end of footer -->
-
+        
         <!-- Copyright -->
         <div class="copyright">
             <div class="container">
@@ -189,8 +189,9 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/vue.min.js"></script>
 <script src="js/map.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpjzcx3gp_y3p0yO-ESAJIz1tOIh8PmVw&libraries=places&language=en-AU&callback=initMap"
-        async defer></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpjzcx3gp_y3p0yO-ESAJIz1tOIh8PmVw&libraries=places&language=en-AU&callback=initMap" async defer></script>-->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChSAnShbp9Hk8Pgq1Rez2BiUvHvoiPbAw&libraries=places&language=en-AU&callback=initMap" async defer></script>
+
 <script>
     $(function () {
         new Vue({
