--- a/map.html
+++ b/map.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
 
-                <div class="map" id="map" ></div>
+                <div id="map"></div>
 
                 <div id="listing" style="margin-left:300px">
                     <table id="resultsTable">
@@ -135,7 +135,6 @@
                 </div>
             </div>
         </div>
-
 
         <!-- Footer -->
         <div class="footer">
