--- a/map.html
+++ b/map.html
@@ -188,10 +188,9 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/vue.min.js"></script>
 <script src="js/map.js"></script>
-<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnJb_c21xI_AVyT_Zr7sCoaZSWDiNRDew&libraries=places&language=en-AU&callback=initMap"
-        async defer></script>-->
-<script src="js/MapAPI.js"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnJb_c21xI_AVyT_Zr7sCoaZSWDiNRDew&libraries=places&language=en-AU&callback=initMap"
         async defer></script>
+<!--<script src="js/MapAPI.js" async defer></script>-->
 <script>
     $(function () {
         new Vue({
