--- a/recipe.html
+++ b/recipe.html
@@ -613,7 +613,7 @@
                     this.showResult = false;
                     this.$refs.backTop.$el.click();
                 },
-                handlePreferencesChange(val) {
+                /*--handlePreferencesChange(val) {
                     val = val.toLowerCase();
                     if (!val.startsWith('-')) {
                         this.calcData.preferences.push(val);
@@ -624,7 +624,7 @@
                             }
                         });
                     }
-                },
+                },--*/
                 handleFavoritesChange(val) {
                     val = val.toLowerCase();
                     if (!val.startsWith('-')) {
